--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <script src="node_modules/socket.io-client/socket.io.js"></script>
   <script src="vendor/lodash.min.js" type="text/javascript"></script>
   <script src="node_modules/wolfy87-eventemitter/EventEmitter.js"></script>
+  <script src="node_modules/bootstrap/js/tooltip.js"></script>
+  <script src="node_modules/bootstrap/js/popover.js"></script>
   <script src="app.js" type="text/javascript"></script>
   <script src="//www.google.com/recaptcha/api.js?render=explicit&onload=onRecaptchaLoad" async defer></script>
 </body>
