Add custom.css placeholder

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
   <link href="style.css" rel="stylesheet">
+  <link href="custom.css" rel="stylesheet"> <!-- Recommendation: Put your CSS customizations in custom.css -->
 </head>
 <body>
   <div id="app"></div>
